--- a/arcane-2.css
+++ b/arcane-2.css
@@ -690,11 +690,11 @@ a:hover {
     width: 30px;
     height: 30px;
     background-color: rgba(0, 0, 0, 0.5);
-    color: white;
+    color: rgb(240, 230, 210);
     border: 1px rgb(200, 155, 60) solid;
     cursor: pointer;
     border-radius: 50%;
-    display: none; /* Hide buttons by default */
+    display: none;
     align-items: center;
     justify-content: center;
     font-size: 18px;
