added Gallery pages

--- a/gallery.css
+++ b/gallery.css
@@ -419,69 +419,6 @@ footer .images-footer img{
     }
 }
 
-
-/* front cover */
-.front-cover {
-    height: 75vh !important;
-    width: 100vw;
-    margin: 0;
-    z-index: 1;
-    position: relative;
-    display: flex;
-}
-.front-cover .BG-img{
-    background-image: url('https://d2w9rnfcy7mm78.cloudfront.net/35836456/original_be35a2539cbc3e474788aad7b76d44b7.png?1744094176?bc=0');
-    background-color: rgba(1, 10, 19, 0.687); 
-    z-index: -10;
-    height: 60vh;
-    width: 100vw;
-    margin-top: -30px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: blur(10px);
-    -webkit-filter: blur(10px);
-}
-.img-one{
-    background-image: url('https://d2w9rnfcy7mm78.cloudfront.net/35836456/original_be35a2539cbc3e474788aad7b76d44b7.png?1744094176?bc=0');
-    background-color: rgba(1, 10, 19, 0.687); 
-    z-index: -10;
-    height: 45vh;
-    width: 70vw;
-    margin-top: 12em;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: absolute;
-    margin-left: 50%;
-    transform: translateX(-50%);
-}
-@media screen and (min-width:901px){
-    .img-one{
-        height: 45vh;
-        width: 80vw;
-        margin-top: 10em;
-    }
-    .BG-img{
-        height: 45vh;
-        width: 100vw;
-        margin-top: -30px;
-    }
-    .front-cover .content{
-        top: 36.5em !important;
-    }
-}
-.front-cover .content{
-    position: absolute;
-    left: 5%;
-    right: 5%;
-    top: 39em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
 /* line-break */
 .line-break{
     border-top: rgb(200, 155, 60) solid 1px;
@@ -498,254 +435,11 @@ footer .images-footer img{
     }
 }
 
-/* story */
-.story {
-    height: 80vh;
-    width: 100vw;
-    padding: 0;
-    position: relative;
+/* span */
+a span{
+    color: rgb(200, 155, 60) !important;
 }
-  
-.story .content {
-    padding-top: 5em;
-    width: 100%;
-    height: 100%;
-}
-  
-.story .content .topic-row {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 1em;
-}
-  
-.story .content .title#h1 {
-    font-size: 3em;
-    font-weight: 700;
-    margin-bottom: 1em;
-    text-align: center;
-}
-  
-.story .content .title:nth-child(3) {
-    display: none;
-}
-  
-/* carousel */
-.carousel {
-    display: flex;
-    width: 100%;
-    height: calc(100% - 9em);
-    position: relative;
-    margin-top: -2em;
-}
-  
-.carousel .nav-buttons {
-    display: none;
-    position: absolute;
-    width: 100%;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 10;
-}
-  
-.carousel .nav-btn {
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: rgb(240, 230, 210);
-    border: 1px rgb(200, 155, 60) solid;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-}
-  
-.carousel .prev-btn {
-    left: 10px;
-}
-  
-.carousel .next-btn {
-    right: 10px;
-}
-  
-.carousel .active-slide-container {
-    width: 60%;
-    padding: 0 2em;
-    transition: opacity 0.5s ease;
-    overflow: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-}
-  
-.carousel .active-slide-container .active-slide {
-    display: flex;
-    flex-direction: column;
-}
-  
-.carousel .active-slide-container .active-slide img {
-    width: 100%;
-    height: auto;
-    max-height: 25em;
-    object-fit: cover;
-    border-radius: 8px;
-    position: relative;
-}
-  
-.carousel .active-slide-container .active-slide .des#medium-body {
-    margin-top: 1em;
-}
-  
-.carousel .slides-column {
-    width: 40%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    overflow-y: auto;
-    padding-right: 2em;
-    padding-bottom: 2em;
-}
-  
-.carousel .slides-column .slide {
-    position: relative;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-    border-radius: 8px;
-    overflow: visible; 
-    height: 4em; 
-}
-  
-.carousel .slides-column .slide .slide-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.1); 
-    z-index: 1;
-    border-radius: 8px;
-}
-  
-.carousel .slides-column .slide:hover {
-    transform: translateX(-10px);
-}
-  
-.carousel .slides-column .slide img {
-    width: 100%;
-    height: 4em; 
-    object-fit: cover;
-    border-radius: 8px;
-}
-  
-.carousel .slides-column .slide .text-overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 0.5em;
-    z-index: 2;
-}
-  
-.carousel .slides-column .slide .topic#stat-number {
-    color: rgb(240, 230, 210);
-    margin-bottom: 0.2em;
-    font-size: 0.9em;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-}
-  
-.carousel .slides-column .slide .des#bold-label {
-    color: rgb(160, 155, 140);
-    font-size: 0.8em;
-}
-  
-.carousel .slides-column .slide .des#medium-body {
-    display: none;
-}
-
-.story .content .carousel #h4{
-    padding-top: 15px;
-    margin-bottom: -15px !important;
-}
-
-.fade-in {
-    animation: fadeIn 0.5s ease forwards;
-}
-  
-.fade-out {
-    animation: fadeOut 0.5s ease forwards;
-}
-  
-@keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
-}
-  
-@keyframes fadeOut {
-    from { opacity: 1; }
-    to { opacity: 0; }
-}
-  
-  
-@media screen and (max-width: 900px) {
-    .story {
-      margin-top: 40px;
-      height: 85vh;
-    }
-    
-    .story .content .title:nth-child(3) {
-      display: inline-block;
-    }
-    
-    .carousel {
-      flex-direction: column;
-      height: 100%;
-    }
-    
-    .carousel .active-slide-container {
-      width: 85%;
-      margin-left: 50%;
-      transform: translateX(-50%);
-    }
-    
-    .carousel .slides-column {
-      display: none;
-    }
-    
-    .carousel .nav-buttons {
-      display: block;
-    }
-    
-    .carousel .slides-column .slide {
-      min-width: 250px;
-      margin: 0 10px;
-    }
-    
-    .carousel .slides-column .slide:hover {
-      transform: translateY(-10px);
-    }
-}
-
-
-
-/* character creation */
-.creation{
-    height: 100vh;
-    width: 100vw;
-    position: relative;
-    background-color: rgb(120, 90, 40);
-}
-.creation .content{
-    margin: 50px 5%;
-}
-.creation .content .create-img img{
-    height: 10em;
-    width: auto;
-}
-.creation .content .des{
-    color: rgb(30, 40, 45) !important;
-    text-align: center;
+a span:hover{
+    color: rgb(200, 155, 60);
+    text-decoration: underline;
 }
