--- a/gallery.css
+++ b/gallery.css
@@ -357,13 +357,18 @@ a:hover {
 /* footer */
 footer {
     width: 100vw;
-    height: 10vh;
+    height: 10vh !important;
+    max-height: 10vh !important;
+    overflow: hidden;
     position: relative;
     margin-top: 20px;
     background-color: rgb(1, 10, 19);
     border-top: 1px solid rgb(200, 155, 60);
-    padding: 20px 0;
+    padding: 0;
     z-index: 10;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
 }
 
 footer .content {
@@ -371,53 +376,38 @@ footer .content {
     display: flex;
     margin-right: 5%;
     margin-left: 5%;
+    height: 100%; 
+    align-items: center; 
+    overflow: hidden;
 }
 
-footer .content .des{
+footer .content .des {
     width: 100%;
     position: relative;
     color: rgb(240, 230, 210);
 }
 
-footer .content .des#show-des{
+footer .content .des#show-des {
     width: 100%;
     position: relative;
     color: rgb(240, 230, 210);
     display: none;
-}
-
-footer .links {
-    padding: 15px 0;
-    width: 100%;
-    position: relative;
-    display: none;
-    font-size: 15px !important;
-}
-
-footer .links a{
-    padding: 0 10px;
-}
-
-footer .images-footer {
-    display: none;
-    padding: 10px;
-}
-
-footer .images-footer img{
-    height: 1.5em;
-    width: auto;
 }
 
 @media screen and (max-width: 900px) {
-    footer .links,
-    footer .images-footer,
-    footer .content .des#show-des{
+    footer .content .des#show-des {
         display: inline-block;
     }
-    footer .content .des{
+    footer .content .des {
         display: none;
     }
+    
+    footer {
+        height: 10vh !important;
+        max-height: 10vh !important;
+    }
 }
+
 
 /* line-break */
 .line-break{
